# SmartSerpent

./: .gitignore  README.md  main.py  pyproject.toml
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: details.html  index.html  predict.html
src/api/: get_snake_info.py  routes.py
src/config/: setting.py
src/llm/: base_model.py  desgin_model.py  system_prompt.py
src/models/: check.py
src/retrive/: embedding_manger.py  extract_image_paths.py  get_snake.py
src/utils/: mapping.json  similaritty_manager.py  snake_prediction.py
